# intro-osr

./: README.md  assignment_motion_planning.py  env_2D.py
envs/: force_control_demo.xml  grasp.xml  pick_and_place.xml
models/: base.kinbody.html  box_and_hole.STL  box_and_hole.kinbody.xml  box_and_hole.wrl  pin.kinbody.xml  thinbox.kinbody.xml
robot_description/: package.xml
robot_description/launch/: rviz_denso_robotiq_85_gripper.launch  rviz_denso_vs060_robot.launch
robot_description/urdf/: denso_robotiq_85_gripper.urdf.xacro  denso_vs060.urdf  denso_vs060_robot.urdf.xacro
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/config/: controllers.yaml
robot_gazebo/launch/: force_control_demo.launch
robot_gazebo/models/: box_and_hole.stl
robot_gazebo/models/box_and_hole/: model.config  model.sdf
robot_gazebo/models/pin/: model.config  model.sdf
robot_gazebo/models/small_box/: model.config  model.sdf
robot_gazebo/models/table/: model.config  model.sdf
robot_gazebo/scripts/: .#cd  denso_client.py~  force_control_demo.py  ftsensor_diagnostics.py  set_up.py
robot_gazebo/worlds/: force_control_demo.world
robots/: .gitignore  denso_robotiq_85_gripper.robot.xml
script/2_manipulator_kinematics/fk/: fk_openrave.py  fk_python.py
script/2_manipulator_kinematics/ik/: ik_python.py  ikfast_SE3.py  task_vel_space_ik.py  task_vel_space_ik_2.py  task_vel_space_multi_ik.py  task_vel_space_single_ik.py
script/3_motion_planning/: graph.py  prm.py  rrt.py  tp_prm.py
