<package>
  <name>robot_description</name>
  <version>0.0.1</version>
  <description>
   <p>This package provides the robot description for DENSO robots.</p>
  </description>
  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>robotiq_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rviz</run_depend>

</package>
